export enum IndexPageIds {
    SessionList = "session-list",
    CreateSession = "create-session",
    CurrentSession = "current-session",
    SessionTitle = "session-title",
    SessionModel = "session-model",
    SessionChat = "session-chat",
    UserMessage = "user-message",
    ModelMessage = "model-message",
    SessionQuery = "session-query",
    QuerySubmit = "query-submit",
    NoteList = "note-list",
    CurrentNote = "current-note",
    NoteTitle = "note-title",
    NoteBody = "note-body"
}