export enum MessageSender {
    User,
    Model
}