export enum Visibility {
    Visible = "visible",
    Hidden = "hidden",
    Collapse = "collapse"
}