@startuml "ClassDiagram"
left to right direction
skinparam linetype ortho

folder constants {
    enum IndexPageIds {
        SessionList
        CreateSession
        CurrentSession
        SessionTitle
        SessionModel
        SessionChat
        UserMessage
        ModelMessage
        SessionQuery
        QuerySubmit
        NoteList
        CurrentNote
        NoteTitle
        NoteBody
    }

    enum Visibility {
        Visible
        Hidden
        Collapse
    }

    enum MessageSender {
        User
        Model
    }

    IndexPageIds -[Hidden]- Visibility
    Visibility -[Hidden]- MessageSender
}

frame View {
    class Index {}
}

frame ViewModel {
    class IndexViewmodel {
        -{field} sessionManager: SessionManager
        -{field} ollamaAPI: Ollama
        +{method} getSessionTitle(): string
        +{method} setSessionTitle(title: string): void
        +{method} getSessionModel(): string
        +{method} setSessionModel(model: string): void
        +{method} openSession(title: string): bool
        +{method} createNewSession(placeholder: string): string
        +{method} getModelList(): list[ModelResponse]
        +{method} sendQuery(query: string): string
    }
}

frame Model {
    class SessionManager {
        -{field} sessions: map<string, Session>
        -{field} currentSession: Session
        +{method} getSessionTitle(): string
        +{method} setSessionTitle(title: string): void
        +{method} getSessionModel(): string
        +{method} setSessionModel(model: string): void
        +{method} createNewSession(defaultTitle: string): string
        +{method} switchToSession(sessionTitle: string): bool
        +{method} queryModel(query: string): string
    }

    class Session {
        -{field} model: string {get, set}
        -{field} title: string {get, set}
        -{field} messageHistory: Array<MessageExchange> {get}
        +{method} addMessageExchange(query: string, response: string): void
    }

    class MessageExchange {
        -{field} query: string {get}
        -{field} response: string {get}
    }
}

' Class Relations
' View - Viewmodel
Index --> IndexViewmodel

' Viewmodel - Model
IndexViewmodel o-- SessionManager

' Model - Model
SessionManager *-- Session
Session -> MessageExchange

' Other
Index -> IndexPageIds
Index --> MessageSender
Index --> Visibility

' Orient diagram
View -[Hidden]right- ViewModel
ViewModel -[Hidden]right- Model

@enduml